adding graph randomization

--- a/notebook/deepDTnet.ipynb
+++ b/notebook/deepDTnet.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,6 @@
    "outputs": [],
    "source": [
     "class GaussianNoise(nn.Module):\n",
-    "    \"\"\"from https://discuss.pytorch.org/t/writing-a-simple-gaussian-noise-layer-in-pytorch/4694/4\"\"\"\n",
     "    def __init__(self, stddev):\n",
     "        super().__init__()\n",
     "        self.stddev = stddev\n",
@@ -307,8 +306,6 @@
     "#  use gpu if available\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "# create a model from `AE` autoencoder class\n",
-    "# load it to the specified device, either gpu or cpu\n",
     "model = SDAE(784, [372, 186, 93]).to(device)\n",
     "\n",
     "# create an optimizer object\n",
@@ -1089,6 +1086,50 @@
     "\n",
     "for i,j in Ineg:\n",
     "    print(np.dot(np.dot(x[i,:], (H @ np.transpose(W))), y[:,j]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate random networks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5136"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N_rand_drugs = 50\n",
+    "N_rand_targets = 100\n",
+    "\n",
+    "#generate random matrices in M({0,1})\n",
+    "#1. a drug-drug network (drug similarities)\n",
+    "#2. a protein-protein network (protein similarities)\n",
+    "#3. a drug-protein network (drug-target known relationships)\n",
+    "dd_net = np.random.randint(0,2,size=(N_rand_drugs, N_rand_drugs))\n",
+    "pp_net = np.random.randint(0,2,size=(N_rand_targets,N_rand_targets))\n",
+    "dp_net = np.random.randint(0,2,size=(N_rand_drugs,N_rand_targets))\n",
+    "\n",
+    "dd_net[np.arange(N_rand_drugs),np.arange(N_rand_drugs)]=0 #nullify the diagonal\n",
+    "dd_net = np.maximum(dd_net,dd_net.T) #make it symmetric\n",
+    "\n",
+    "pp_net[np.arange(N_rand_targets),np.arange(N_rand_targets)]=0\n",
+    "pp_net = np.maximum(pp_net,pp_net.T)\n",
+    "\n",
+    "np.sum(dp_net)/(N_rand_drugs*N_rand_targets)"
    ]
   },
   {
