--- a/notebook/Run on deepDTnet data.ipynb
+++ b/notebook/Run on deepDTnet data.ipynb
@@ -21368,6 +21368,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reading DeepDTnet authors' results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -21754,6 +21761,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ### Focusing on ROR-gt"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 94,
    "metadata": {},
@@ -22050,8 +22064,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3 (Spyder)",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
@@ -22068,5 +22082,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
